boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_class_counter_with_methods.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>
#nullable enable

using System;
using System.Threading;

namespace Demo
{
    public sealed class Counter : IDisposable
    {
        private IntPtr _handle;

        internal Counter(IntPtr handle)
        {
            _handle = handle;
        }

        public int Get()
        {
            ThrowIfDisposed();
            return NativeMethods.CounterGet(_handle);
        }

        public void Increment()
        {
            ThrowIfDisposed();
            NativeMethods.CounterIncrement(_handle);
        }

        public static int Zero()
        {
            return NativeMethods.CounterZero();
        }

        internal IntPtr RawHandle => _handle;

        private void ThrowIfDisposed()
        {
            if (_handle == IntPtr.Zero) throw new ObjectDisposedException(nameof(Counter));
        }

        public void Dispose()
        {
            IntPtr handle = Interlocked.Exchange(ref _handle, IntPtr.Zero);
            if (handle == IntPtr.Zero) return;
            NativeMethods.CounterFree(handle);
            GC.SuppressFinalize(this);
        }

        ~Counter()
        {
            Dispose();
        }
    }
}
